<resources>
    <string name="app_name">Number Converter</string>
    <string name="title">Number Converter</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="clear">C</string>
    <string name="delete">DEL</string>
    <string name="decimal">.</string>
    <string name="equals">=</string>

    <string name="email_address">email Address</string>
    <string name="password">Password: min 6 characters</string>
    <string name="login">Login</string>
    <string name="conv">Number Systems Converter</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="pswrd">Password</string>
    <string name="email">email</string>


    <string-array name="spinner_items">
        <item>Binary</item>
        <item>Decimal</item>
        <item>Hex</item>
        <item>Octal</item>
    </string-array>
</resources>