<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorControlNormal"
    tools:context=".WelcomePage">

    <TextView
        android:id="@+id/AppName"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/raleway"
        android:text="@string/conv"
        android:textColor="#18FFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center"/>

<!--    <ImageView-->
<!--        android:id="@+id/cardioimg"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/AppName"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginBottom="80dp"-->
<!--        android:src="@drawable/cardio" />-->


    <Button
        android:id="@+id/Loginbtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/AppName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/black"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp" />

    <Button
        android:id="@+id/Registerbtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/Loginbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp" />
</RelativeLayout>