<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".LoginPage">

    <TextView
        android:id="@+id/AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/raleway"
        android:text="@string/conv"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck"
        android:gravity="center"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="20dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:drawableEnd="@drawable/baseline_mail_outline_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Enter your email address"
        tools:ignore="VisualLintTextFieldSize"
        android:elevation="5dp"
        android:translationZ="5dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="20dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/pswrd"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:drawableEnd="@drawable/baseline_lock_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Create a unique password"
        tools:ignore="VisualLintTextFieldSize"
        android:elevation="5dp"
        android:translationZ="5dp"/>

    <Button
        android:id="@+id/signinbtn"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#18FFFF"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="579dp" />

</RelativeLayout>