<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorControlNormal"
    tools:context=".RegisterPage">

    <TextView
        android:id="@+id/AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="times new roman"
        android:text="@string/bmicalc"
        android:textColor="#F4511E"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/mediumPurple"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="20dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/name"
        android:textColorHint="@color/black"
        android:inputType="text"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:drawableEnd="@drawable/baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Your Name"
        tools:ignore="VisualLintTextFieldSize"
        android:elevation="5dp"
        android:translationZ="5dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullname"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="20dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/email_address"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:drawableEnd="@drawable/baseline_mail_outline_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Enter your email address"
        tools:ignore="VisualLintTextFieldSize"
        android:elevation="5dp"
        android:translationZ="5dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="20dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:drawableEnd="@drawable/baseline_lock_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Create a unique password"
        tools:ignore="VisualLintTextFieldSize"
        android:elevation="5dp"
        android:translationZ="5dp"/>

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="20dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/confirm_password"
        android:drawableEnd="@drawable/baseline_lock_24"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Re enter your Password"
        tools:ignore="VisualLintTextFieldSize"
        android:elevation="5dp"
        android:translationZ="5dp"/>

    <Button
        android:id="@+id/Signupbtn"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@id/confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/mediumPurple"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="DuplicateSpeakableTextCheck"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="579dp" />

</RelativeLayout>